[package]
name = "im_core"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
protobuf = "3.2.0"


[build-dependencies]
cxx-build = "1.0"
protobuf-codegen = "3.2.0"


